--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,10 @@
     padding: 0.5rem 1.5rem;
     border-radius: 5px;
     border: 2px solid var(--color-orange);
+    transition: var(--transition);
 }
 
 .header-anchor:hover {
     background-color: transparent;
+    color: var(--color-orange);
 }
