--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,16 @@
   width: 100%;
 }
 
+.menu-btn {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  font-size: 32px;
+  cursor: pointer;
+  display: none;
+  color: var(--color-light);
+}
+
 .header-page {
   width: 100%;
   height: 100vh;
@@ -91,29 +101,33 @@
 }
 
 .header-title {
-    color: var(--color-light);
-    font-size: 9vmin;
-    margin: 2rem;
+  color: var(--color-light);
+  font-size: 9vmin;
+  margin: 2rem;
 }
 
 .header-text {
-    color: var(--color-light);
-    width: 50%;
+  color: var(--color-light);
+  width: 50%;
 }
 
 .header-anchor {
-    text-decoration: none;
-    color: var(--color-light);
-    font-weight: bold;
-    margin: 2rem;
-    background-color: var(--color-orange);
-    padding: 0.5rem 1.5rem;
-    border-radius: 5px;
-    border: 2px solid var(--color-orange);
-    transition: var(--transition);
+  text-decoration: none;
+  color: var(--color-light);
+  font-weight: bold;
+  margin: 2rem;
+  background-color: var(--color-orange);
+  padding: 0.5rem 1.5rem;
+  border-radius: 5px;
+  border: 2px solid var(--color-orange);
+  transition: var(--transition);
 }
 
 .header-anchor:hover {
-    background-color: transparent;
-    color: var(--color-orange);
+  background-color: transparent;
+  color: var(--color-orange);
+}
+
+.fa-paper-plane {
+  margin-left: 0.5rem;
 }
