--- a/css/style.css
+++ b/css/style.css
@@ -1,133 +1,260 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
+/* variáveis */
 :root {
-  --color-light: #ffffff;
-  --color-orange: #e6630d;
-  --color-blue: rgb(12, 7, 39);
-  --transition: 0.5s;
-  --l-gradiente: rgba(4, 9, 30, 0.3), rgba(4, 9, 30, 0.9);
+    --color-light: #ffffff;
+    --color-orange: #e6630d;
+    --color-blue: rgb(12, 7, 39);
+    --transition: .5s;
+    --l-gradiente: rgba(4, 9, 30, .3), rgba(4, 9, 30, .9);
 }
 
-.logo {
-  position: relative;
-  font-size: 32px;
+html {
+    scroll-behavior: smooth;
 }
 
-.logo-square {
-  background-color: var(--color-orange);
-  border-radius: 5px;
-  padding: 5px;
-  color: var(--color-light);
+/* formatações genéricas */
+a {
+    text-decoration: none;
+    color: var(--color-light);
+    font-weight: 900;
+    transition: var(--transition);
 }
 
-.anchor,
-.logo {
-  text-decoration: none;
-  color: var(--color-light);
-  font-weight: 900;
-  transition: var(--transition);
+a:hover:not(.logo) {
+    color: var(--color-orange);
 }
 
-.anchor:hover {
-  color: var(--color-orange);
+ul,
+ol {
+    list-style: none;
 }
 
 .nav-bar {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.nav-title {
-  width: 45%;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: var(--transition);
 }
 
-.nav-list {
-  width: 55%;
-  list-style: none;
+.logo {
+    position: relative;
+    top: 5px;
+    left: 20px;
+    font-size: 32px;
 }
 
-.nav-list {
-  display: flex;
-  justify-content: space-around;
+.logo-square {
+    background-color: var(--color-orange);
+    padding: 5px;
+    border-radius: 5px;
 }
 
-.nav-list-item::after {
-  content: "";
-  width: 0;
-  height: 2px;
-  background-color: var(--color-orange);
-  display: block;
-  margin: auto;
-  transition: var(--transition);
+.nav-menu {
+    display: flex;
+    align-items: center;
 }
 
-.nav-list-item:hover::after {
-  width: 100%;
+.nav-menu li {
+    margin: 0 30px;
 }
 
-.menu-btn {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  font-size: 32px;
-  cursor: pointer;
-  display: none;
-  color: var(--color-light);
+.nav-menu li::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background-color: var(--color-orange);
+    display: block;
+    margin: auto;
+    transition: var(--transition);
 }
 
+.nav-menu li:hover::after {
+    width: 100%;
+}
+
+.active-scroll{ 
+    background-color: rgba(1, 1, 68, .89);}
+
+/* header  */
 .header-page {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(to top, var(--l-gradiente), var(--l-gradiente)), url(../images/banner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  padding: 10%;
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(var(--l-gradiente), var(--l-gradiente)),
+        url(../images/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-light);
+    text-align: center;
 }
 
-.header-title {
-  color: var(--color-light);
-  font-size: 9vmin;
-  margin: 2rem;
+.header-page h1 {
+    font-size: 9vmin;
+    margin: 30px 0;
 }
 
-.header-text {
-  color: var(--color-light);
-  width: 50%;
+.header-page p {
+    width: 50%;
+    margin: 20px 0 50px;
 }
 
-.header-anchor {
-  text-decoration: none;
-  color: var(--color-light);
-  font-weight: bold;
-  margin: 2rem;
-  background-color: var(--color-orange);
-  padding: 0.5rem 1.5rem;
-  border-radius: 5px;
-  border: 2px solid var(--color-orange);
-  transition: var(--transition);
+.btn {
+    background-color: var(--color-orange);
+    border: 2px solid var(--color-orange);
+    padding: 8px 35px;
+    border-radius: 5px;
+    color: var(--color-light);
+    transition: var(--transition);
 }
 
-.header-anchor:hover {
-  background-color: transparent;
-  color: var(--color-orange);
+.btn:hover {
+    background-color: transparent;
 }
 
 .fa-paper-plane {
-  margin-left: 0.5rem;
+    margin-left: 7px;
 }
+
+/* menu sanduíche */
+.menu-btn {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 32px;
+    cursor: pointer;
+    display: none;
+    color: var(--color-light);
+}
+
+/* fim header */
+
+/********************************* explore *********************************/
+.box {
+    width: 85%;
+    min-height: 100vh;
+    margin: auto;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.box-title {
+    font-size: 6vmin;
+    margin: 20px 0;
+}
+
+.box-list {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box-list-item {
+    width: 30%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: var(--transition);
+}
+
+.box-list-item:hover {
+    transform: scale(1.1);
+}
+
+.box-list-img1 {
+    background-image: linear-gradient(var(--l-gradiente), var(--l-gradiente)),
+        url(../images/explore1.jpg);
+}
+
+.box-list-img2 {
+    background-image: linear-gradient(var(--l-gradiente), var(--l-gradiente)),
+        url(../images/explore2.jpg);
+}
+
+.box-list-img3 {
+    background-image: linear-gradient(var(--l-gradiente), var(--l-gradiente)),
+        url(../images/explore3.jpg);
+}
+
+/********************************* fim explore *****************************/
+
+
+
+
+
+
+
+/******************** Pensando no responsivo  **************************/
+/******** Menu ****************/
+@media(max-width: 1000px) {
+    .menu-btn {
+        display: block;
+    }
+
+    .nav-bar {
+        padding: 0;
+    }
+
+    .logo {
+        position: absolute;
+        top: 25px;
+        left: 30px;
+    }
+
+    .nav-menu {
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        background-color: var(--color-blue);
+        margin-top: -1100px;
+        transition: var(--transition);
+    }
+
+    .mobile-menu {
+        margin-top: 0;
+    }
+
+    .nav-menu li {
+        margin: 30px auto;
+    }
+
+    .nav-menu a {
+        text-transform: uppercase;
+    }
+
+    /* explore */
+    .box-list {
+        flex-direction: column;
+    }
+
+    .box-list-item {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
+
+/* @media(max-width: 600px){
+
+} */
